--- a/views/pagini/useri.ejs
+++ b/views/pagini/useri.ejs
@@ -1,58 +1,69 @@
 <!DOCTYPE html>
 <html  lang="ro">
     <head>
-        <meta name="description" content="Cofetaria Dulcelind - utilizatori.">
-        <meta name="keywords" content="cofetarie, Dulcelind, utilizatori">
+        <meta name="description" content="BikeAddiction - utilizatori.">
+        <meta name="keywords" content="biciclete, BikeAddiction, utilizatori">
         <link rel="stylesheet" href="/resurse/css/useri.css" type="text/css" />
-        <title>Cofetăria Dulcelind - utilizatori</title>
+        <title>BikeAddiction - utilizatori</title>
         <%- include("../fragmente/head") %>     
-        <script type="text/javascript" src=/resurse/js/produse.js></script>
+        <!-- <script type="text/javascript" src=/resurse/js/produse.js></script> -->
     </head>
     <body>
     <%- include("../fragmente/header") %>
 
     <main>
-    <div class="afisaj">
-        <h2>Useri</h2>
+		<section id="users-section">
+			<h2>Users</h2>
+	
+			<table id="users-table">
+			<tr>
+				<th>Username</th><th>Nume</th><th>Prenume</th><th>Email</th><th>Problema vedere</th><th>Poza</th><th></th>
+			</tr>
 
-		<table id="useri">
-		  <tr>
-			<th>id</th><th>Username</th><th>Nume</th><th>Prenume</th><th>Data</th><th>Rol</th>
-		  </tr>
-
-		  <% for (var i = 0; i < useri.length; i++) { 
-				if(useri[i].rol=="comun"){
-				%>
+			<% 
+			for (var i = 0; i < users.length; i++) { 
+				if(users[i].rol == "comun"){
+			%>
 				<tr>
-				  <td><%= useri[i].id %></td>
-				  <td><%= useri[i].username %></td>
-				  <td><%= useri[i].nume %></td>
-				  <td><%= useri[i].email %></td>
-				  <%  
-					d=new Date(useri[i].data_adaugare)
-					sir_data=`${d.getDate()}/${d.getMonth()}/${d.getFullYear()} ${d.getHours()}:${d.getMinutes()}:${d.getSeconds()}`
-				  %>
-				  <td><%=  sir_data %></td>
-				   <td><%=  useri[i].rol %></td>
+					<td><%- users[i].username %></td>
+					<td><%- users[i].nume %></td>
+					<td><%- users[i].prenume %></td>
+					<td><%- users[i].email %></td>
+					<% let problema_vedere = users[i].problema_vedere ? "Da" : "Nu"; %>
+					<td><%- problema_vedere %></td>
+					<td>
+						<% 
+						let cale_poza = "resurse/imagini/altele/poza-mica.png";
+						if(users[i].poza_profil)
+							cale_poza = `poze_uploadate/${users[i].username}/poza-mica.png`; 
+						%>
+						<figure class="imag-profil-mica-tabel">
+							<img class="imag-profil-mica" src="/<%- cale_poza %>" alt="[imagine profil]" />
+						</figure>
+					</td>
+					<td>
+						<form id="sterge-poza" method="post" action="/stergere_poza_profil">
+							<label style="display: none;">
+								Id: <input type="text" name="id_utiliz" value="<%- users[i].id %>">
+							</label>						
+							<input type="submit" value="Sterge poza" class="buton">
+						</form>
+					</td>
 				</tr> 
-   
 				<% } %>			
-		  <% } %>
-		</table>
-		
-		<p>Sterge utilizator</p>
-		<form id="sterge" method="post" action="/sterge_utiliz">
-			<label>
-				Id: <input type="text" name="id_utiliz" value="">
-			</label>
+			<% } %>
+			</table>
 			
-			<input type="submit" value="Submit">
-		</form>
-	</div>
-</main>
-
+			<% if(locals.type == true){ %>
+				<p class="mesaj-succes"><%- locals.raspuns %></p>
+			<% } else if(locals.type == false){%>
+				<p class="mesaj-eroare"><%- locals.raspuns %></p>
+			<% } %> 
+			
+		</section>
+	</main>
 
     <%- include("../fragmente/footer") %>
 
-</body>
+	</body>
 </html>
