--- a/resurse/css/pagina-produse.css
+++ b/resurse/css/pagina-produse.css
@@ -15,6 +15,7 @@ section.produs {
 	border-radius: 40px;
 	padding: 0;
 	overflow: hidden;
+	padding-bottom: 20px;
 }
 
 section.produs a {
@@ -76,6 +77,26 @@ section.produs {
 	transition: all 0.2s linear;
 	color: var(--color6);
 	opacity: 0.7;
+}
+
+.buton1 {
+	width: auto;
+	height: 40px;
+	background-color: var(--color2);
+	color: var(--color6);
+	border-radius: 8px;
+	border: 1px solid var(--color6);
+	text-align: center;
+	padding-left: 10px;
+	padding-right: 10px;
+	position: absolute;
+	bottom: 1rem;
+	right: 1rem;
+}
+
+.buton1:hover {
+	transition: all 0.1s linear;
+	background-color: var(--color4);
 }
 
 @media screen and (max-width: 800px) {
