--- a/views/pagini/useri.ejs
+++ b/views/pagini/useri.ejs
@@ -25,7 +25,7 @@
 				if(users[i].rol == "comun"){
 			%>
 				<tr>
-					<td><%- users[i].username %></td>
+					<td><a href="/utilizator/<%- users[i].username %>" class="link"><%- users[i].username %></a></td>
 					<td><%- users[i].nume %></td>
 					<td><%- users[i].prenume %></td>
 					<td><%- users[i].email %></td>
