--- a/views/fragmente/footer.ejs
+++ b/views/fragmente/footer.ejs
@@ -16,14 +16,16 @@
                 <li><a href="resurse/documente/GDPR.pdf" download="GDPR.pdf">GDPR: Drepturile Consumatorului (descarca document)</a></li>
                 <li><a href="metodePlata.html">Metode de plata</a></li>
                 <li><a href="https://anpc.ro/" target="_blank">ANPC</a></li>
+                <li><a href="/terms">Termeni si conditii</a></li>
+                <li><a href="/privacy">Politica de confidentialitate</a></li>
             </ul>
         </div>
     </section>
     <section id="copyright" class="sectiune-footer">
         <p><small>Copyright &copy;2022BikeAddiction</small><time datetime="2022-02-19T18:25:10+03:00"> </time></p>
     </section>
-    <section>
-        <p id="banner-cookie">Acesta este un proiect scolar. Acceptati cookie-urile de pe site? <button id="ok_cookies">Ok</button></p>
-    </section>
+    <!-- <section>
+        <p id="banner-cookie">Acesta este un proiect scolar. Acceptati cookie-urile de pe site? <button id="ok-cookies">Ok</button></p>
+    </section> -->
     <a href="#" title="Mergi sus" id="link-top"><div id="triunghi">&#5123;</div></a>
 </footer>
