--- a/views/fragmente/formular-stergere-cont.ejs
+++ b/views/fragmente/formular-stergere-cont.ejs
@@ -4,7 +4,7 @@
         <input id="inp-parl" type="password" required  name="parola" value="">
         
         <p id="buton-stergere">
-            <input class="buton" type="submit" value="Sterge contul">
+            <input class="buton" type="submit" value="<%- locals.mesaj %>">
         </p>
     </div>
 </form>
