--- a/views/pagini/contact.ejs
+++ b/views/pagini/contact.ejs
@@ -13,7 +13,7 @@
             <section id="sectiune-contact">
                 <h2 style="color:black">Informatii contact: </h2>
                 <ul>
-                    <li><div>Pentru probleme si sugestii legate de functionarea site-ului:</div> 
+                    <li><div><span style="font-weight: bold;">Pentru probleme si sugestii legate de functionarea site-ului:</span></div> 
                         <ul>
                             <li><a href="tel:+40745237023">Telefon</a></li>
                             <li><a href="skype:live:.cid.da81650dcbe93f0e?chat">Skype</a></li>
@@ -22,10 +22,16 @@
                             <li><a href="https://www.bing.com/maps?q=fmi+unibuc+google+maps&qs=n&form=QBRE&msbsrank=0_1__0&sp=-1&pq=fmi+unibuc+google+ma&sc=1-20&sk=&cvid=3BCB27ECBCCA4C11B3F0829776D03688">Sediu</a></li>
                         </ul>
                     </li>
-                    <li><div>Locatii service-uri pentru biciclete:</div>
+                    <li><div><span style="font-weight: bold;">Locatii service-uri pentru biciclete:</span></div>
                         <ul>
                             <li><a href="https://www.bing.com/maps?q=fmi+unibuc+google+maps&qs=n&form=QBRE&msbsrank=0_1__0&sp=-1&pq=fmi+unibuc+google+ma&sc=1-20&sk=&cvid=3BCB27ECBCCA4C11B3F0829776D03688">Str. Academiei nr. 14, Bucuresti</a></li>
                             <li><a href="https://www.bing.com/maps?q=fmi+unibuc+google+maps&qs=n&form=QBRE&msbsrank=0_1__0&sp=-1&pq=fmi+unibuc+google+ma&sc=1-20&sk=&cvid=3BCB27ECBCCA4C11B3F0829776D03688">Str. Academiei nr. 14, Bucuresti</a></li>
+                        </ul>
+                    </li>
+                    <li><div><span style="font-weight: bold;">Aspecte juridice:</span></div>
+                        <ul>
+                            <li><a href="/terms">Termeni si conditii</a></li>
+                            <li><a href="/privacy">Politica de confidentialitate</a></li>
                         </ul>
                     </li>
                 </ul>
