--- a/views/pagini/produse.ejs
+++ b/views/pagini/produse.ejs
@@ -117,7 +117,7 @@
                         <a href="/produs/<%-prod.id %>" ><img src="/<%- prod.imagine %>" style="width:50%;height:auto;" alt="[imagine <%- prod.nume %>]" /></a>
                     </figure>
                     <% if(locals.utilizator && prod.autor_anunt == locals.utilizator.username) { %> 
-                        <form action="/editare_anunt" method="get" enctype="multipart/form-data">
+                        <form action="/editare_anunt/<%- prod.id %>" method="get" enctype="multipart/form-data">
                             <input class="buton1" type="submit" value="Editeaza anuntul">
                         </form>
                     <% } else {%>        
