--- a/views/pagini/profil.ejs
+++ b/views/pagini/profil.ejs
@@ -18,6 +18,7 @@
                         <p><span>Nume:</span> <%- locals.nume %></p>
                         <p><span>Prenume:</span> <%- locals.prenume %></p>
                         <p><span>Nr. anunturi:</span> <%- locals.produse.length %></p>
+                        <p><span>Rol:</span> <%- locals.rol %> </p>
                     </div>
                     <figure id="contianer-imag-mare-profil">
                         <img id="imag-mare-profil" src="/<%- locals.cale_poza %>" alt="[imagine profil]" />
@@ -42,7 +43,7 @@
                             <a href="/produs/<%-prod.id %>" ><img src="/<%- prod.imagine %>" style="width:50%;height:auto;" alt="[imagine <%- prod.nume %>]" /></a>
                         </figure>
                         <% if(locals.utilizator && locals.username_profil == locals.utilizator.username) { %> 
-                            <form action="/editare_anunt" method="get" enctype="multipart/form-data">
+                            <form action="/editare_anunt/<%- prod.id %>" method="get" enctype="multipart/form-data">
                                 <input class="buton1" type="submit" value="Editeaza anuntul">
                             </form>
                         <% } else {%>        
